# lingo

./: .gitignore  README.md  package-lock.json  package.json  popup.html  settings.html  tsconfig.json  vite.config.ts
design/: landing.html  mockups.html
docs/: index.html
promo/: promo.css  promo.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/google/: error_ratelimit.html  hebrew_he_en.json  sentence_nl_en.json  word_de_en.json  word_en_en_detected.json  word_en_he.json  word_nl_en.json
src-tauri/src/: capture.rs  commands.rs  config.rs  hotkey.rs  main.rs  popup.rs  settings.rs  types.rs
src-tauri/src/translate/: deepl.rs  google.rs  mod.rs  tts.rs
src/lib/: hotkey.test.ts  hotkey.ts  ipc.ts  langOptions.test.ts  langOptions.ts  langs.ts  latest.test.ts  latest.ts  speech.test.ts  speech.ts
src/popup/: Popup.tsx  index.tsx  popup.css
src/settings/: Settings.tsx  index.tsx  settings.css
src/styles/: tokens.css
tools/: capture-promo.cjs
