[package]
name = "lingo"
version = "0.2.0"
description = "Minimal Windows translation popup"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time", "sync", "macros", "rt"] }
thiserror = "2"
log = "0.4"
get-selected-text = "0.1"
base64 = "0.22.1"

[profile.release]
lto = true
codegen-units = 1
